--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link href="https://www.fontspace.com/derania-font-f83577" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" href="styles.css">
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,7 +23,7 @@
 
 <body>
 
-</h1>
+
 
 
 <div class="container">
@@ -162,5 +162,6 @@
 
     
 </body>
+    
 
 
